fixed UI layout issues

--- a/src/Components/Popular/Popular.css
+++ b/src/Components/Popular/Popular.css
@@ -41,7 +41,7 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 20px; 
   margin-top: 40px; 
-  
+  width: 100%;
 }
 
 /* Laptop */
